--- a/site/web/app/themes/exonym/assets/styles/config/_typography.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_typography.scss
@@ -1,18 +1,19 @@
-/** Font Families & Settings
- ---------------------------------------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i');
+/**
+  Font Families & Settings
+  ---------------------------------------------------------------------- */
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
 
-$font-default: 'Lato', sans-serif;
-$font-heading: 'Lato', sans-serif;
+$font-default: "Lato", sans-serif;
+$font-heading: "Lato", sans-serif;
 
 $font-size: 16px;
 
-$font-light:        300;
-$font-normal:       400;
-$font-bold:         700;
-$font-ultra-bold:   900;
+$font-light: 300;
+$font-normal: 400;
+$font-bold: 700;
+$font-ultra-bold: 900;
 
-$font-italic:       italic;
+$font-italic: italic;
 
 // Define if font weights and styles use markup or an alternate font face
 $useMarkupBold: true;
@@ -20,47 +21,105 @@ $useMarkupItal: true;
 
 @mixin fontBold($undo: true, $weight: $font-bold) {
   @if $useMarkupBold {
-    @if $undo { font-weight: $weight; } @else { font-weight: $font-normal; }
-  } @else {
-    @if $undo { font-family: $weight; } @else { font-family: $font-default; }
+    @if $undo {
+      font-weight: $weight;
+    }
+
+    @else {
+      font-weight: $font-normal;
+    }
+  }
+
+  @else {
+    @if $undo {
+      font-family: $weight;
+    }
+
+    @else {
+      font-family: $font-default;
+    }
   }
 }
 
 @mixin fontItalic($undo: true, $style: $font-italic) {
   @if $useMarkupItal {
-    @if $undo { font-style: $style; } @else { font-style: normal; }
-  } @else {
-    @if $undo { font-family: $style; } @else { font-family: $font-default; }
+    @if $undo {
+      font-style: $style;
+    }
+
+    @else {
+      font-style: normal;
+    }
+  }
+
+  @else {
+    @if $undo {
+      font-family: $style;
+    }
+
+    @else {
+      font-family: $font-default;
+    }
   }
 }
 
-strong { @include fontBold(); }
-em { @include fontItalic(); }
-small { font-size: 0.75rem; }
+strong {
+  @include fontBold();
+}
 
-/** Body Font Defaults
- ---------------------------------------------------------*/
+em {
+  @include fontItalic();
+}
+
+small {
+  font-size: 0.75rem;
+}
+
+/**
+  Body Typography Defaults
+  ---------------------------------------------------------------------- */
 body {
-  color: black;
+  color: $black;
   line-height: 1;
   font-size: $font-size;
   font-family: $font-default;
   font-weight: $font-normal;
 }
 
-/** Module Text Sizes
- ---------------------------------------------------------*/
+/**
+  Exonym Module Text Sizes
+  ---------------------------------------------------------------------- */
 .module-text-size {
-  &-xsmall { font-size: 0.75em; }
-  &-small { font-size: 0.85em; }
-  &-normal { font-size: 1em; }
-  &-large { font-size: 1.25em; }
-  &-xlarge { font-size: 1.5em; }
+  &-xsmall {
+    font-size: 0.75em;
+  }
+
+  &-small {
+    font-size: 0.85em;
+  }
+
+  &-normal {
+    font-size: 1em;
+  }
+
+  &-large {
+    font-size: 1.25em;
+  }
+
+  &-xlarge {
+    font-size: 1.5em;
+  }
 }
 
-/** Headings
- ---------------------------------------------------------*/
-h1, h2, h3, h4, h5, h6 {
+/**
+  Global Website Headings
+  ---------------------------------------------------------------------- */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   clear: both;
   display: block;
   text-rendering: optimizelegibility;
@@ -68,6 +127,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   line-height: 1;
   font-family: $font-heading;
+
   @include fontBold();
 }
 
@@ -104,9 +164,11 @@ h6 {
   letter-spacing: 0.25em;
 }
 
-/** List Settings
- ---------------------------------------------------------*/
-ul, ol {
+/**
+  Global List Settings
+  ---------------------------------------------------------------------- */
+ul,
+ol {
   margin: 0 0 2em 2rem;
   padding: 0;
 
@@ -124,8 +186,9 @@ ol {
   list-style-type: decimal;
 }
 
-/** Paragraph & Blockquote Defaults
- ---------------------------------------------------------*/
+/**
+  Global Paragraph Settings
+  ---------------------------------------------------------------------- */
 p {
   margin: 0;
   padding: 0 0 2em 0;
@@ -139,7 +202,7 @@ blockquote {
   position: relative;
 
   &::before {
-    content: '\201C';
+    content: "\201C";
     font-family: Georgia, serif;
     font-size: 4em;
     font-weight: bold;
@@ -149,6 +212,6 @@ blockquote {
   }
 
   &::after {
-    content: '';
+    content: "";
   }
 }
