--- a/site/web/app/themes/exonym/assets/styles/global/_footer.scss
+++ b/site/web/app/themes/exonym/assets/styles/global/_footer.scss
@@ -1,3 +1,10 @@
+/**
+  Global Website Footer
+  ---------------------------------------------------------------------- */
 .nav-footer {
   @include navMenu(vertical);
 }
+
+/**
+  Responsive Breakpoints
+  ---------------------------------------------------------------------- */
