--- a/site/web/app/themes/exonym/assets/styles/config/_grid.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_grid.scss
@@ -3,14 +3,14 @@
   $aligny: flex-start,
   $direction: row,
   $wrapping: nowrap,
-  $alignwrap: flex-start) {
-
-    display: flex;
-    flex-direction: $direction;
-    flex-wrap: $wrapping;
-    justify-content: $alignx;
-    align-items: $aligny;
-    align-content: $alignwrap;
+  $alignwrap: flex-start
+) {
+  display: flex;
+  flex-direction: $direction;
+  flex-wrap: $wrapping;
+  justify-content: $alignx;
+  align-items: $aligny;
+  align-content: $alignwrap;
 }
 
 @mixin grid-single(
@@ -18,11 +18,11 @@
   $order: 1,
   $grow: 0,
   $shrink: 1,
-  $basis: auto) {
-
-    align-self:$align;
-    order: $order;
-    flex: $grow $shrink $basis;
+  $basis: auto
+) {
+  align-self: $align;
+  order: $order;
+  flex: $grow $shrink $basis;
 }
 
 /*
