--- a/site/web/app/themes/exonym/assets/styles/config/_reset.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_reset.scss
@@ -1,7 +1,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -10,101 +13,204 @@ html {
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-weight: inherit;
   vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
-/* Added "main" element for IE compliance */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, main, menu, nav, section {
-	display: block;
+/* HTML5 display-role reset for older browsers - Added "main" element for IE compliance */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section {
+  display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
+  content: "";
+  content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /************* Image and Embeds *************/
 
-img, iframe, object, embed, figure {
+img,
+iframe,
+object,
+embed,
+figure {
   max-width: 100%;
   height: auto;
 }
 
 .video-container {
   clear: both;
-  position:relative;
+  position: relative;
   width: 100%;
-  padding-bottom:56.25%;
+  padding-bottom: 56.25%;
   margin-bottom: 2em;
-  height:0;
-  overflow:hidden;
+  height: 0;
+  overflow: hidden;
 
-  iframe, object, embed {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+  iframe,
+  object,
+  embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
-/************* Clearfix *************/
+/**
+  Clearfix
+  ---------------------------------------------------------------------- */
 
 @mixin clearfix() {
   *zoom: 1;
   clear: both;
 
-  &:before, &:after {
-    content: '';
+  &::before,
+  &::after {
+    content: "";
     display: table;
     line-height: 0;
     clear: both;
   }
 }
 
-.cf, .clearfix {
+.cf,
+.clearfix {
   @include clearfix;
 }
 
-/************* Make WP Happy *************/
+/**
+  Wordpress Compliance
+  ---------------------------------------------------------------------- */
 
-.wp-caption, .wp-caption-text, .sticky,
-.screen-reader-text, .gallery-caption,
-.bypostauthor, .aligncenter, .alignleft,
-.alignright, .wp-caption, .wp-caption-text {
+.wp-caption,
+.wp-caption-text,
+.sticky,
+.screen-reader-text,
+.gallery-caption,
+.bypostauthor,
+.aligncenter,
+.alignleft,
+.alignright {
   list-style-type: none; // Only necessary to build out these values
 }
 
