--- a/site/web/app/themes/exonym/assets/styles/global/_base.scss
+++ b/site/web/app/themes/exonym/assets/styles/global/_base.scss
@@ -1,7 +1,8 @@
-/** Body & Wrapper
- ---------------------------------------------------------*/
-
-html, body {
+/**
+  Global Body & Wrappers
+  ---------------------------------------------------------------------- */
+html,
+body {
   max-width: 100%;
 }
 
@@ -11,16 +12,18 @@ html, body {
   position: relative;
 }
 
-/** Link Styles
- ---------------------------------------------------------*/
+/**
+  Global Link Defaults
+  ---------------------------------------------------------------------- */
 a {
   text-decoration: none;
 }
-@include linkColor($black, all);
 
-/** Image Alignment
- ---------------------------------------------------------*/
+@include linkColor($blue, all);
 
+/**
+  Wordpress Image ALignment
+  ---------------------------------------------------------------------- */
 .aligncenter {
   margin: 1em auto;
 }
@@ -33,9 +36,9 @@ a {
   margin: 1em 0 1em 1em;
 }
 
-/** Responsive Breakpoints
- ---------------------------------------------------------*/
-
+/**
+  Responsive Breakpoints
+  ---------------------------------------------------------------------- */
 @media (min-width: 1025px) {
   .wrap {
     width: 1150px;
