--- a/site/web/app/themes/exonym/assets/styles/main.scss
+++ b/site/web/app/themes/exonym/assets/styles/main.scss
@@ -1,21 +1,26 @@
-/** Configuration Components
- ---------------------------------------------------------*/
-@import
-  'config/effects',
-  'config/functions',
-  'config/grid',
-  'config/reset',
-  'config/colors',
-  'config/typography',
-  'config/forms',
-  'config/hamburger'
-;
+/**
+  Configuration Settings & Mixins
+  ---------------------------------------------------------------------- */
+@import "config/effects";
+@import "config/animation";
+@import "config/functions";
+@import "config/grid";
+@import "config/reset";
+@import "config/colors";
+@import "config/typography";
+@import "config/forms";
+@import "config/hamburger";
 
-/** Global Elements
- ---------------------------------------------------------*/
-@import
-  'global/base',
-  'global/navigation',
-  'global/header',
-  'global/footer'
-;
+/**
+  Global Elements
+  ---------------------------------------------------------------------- */
+@import "global/base";
+@import "global/navigation";
+@import "global/header";
+@import "global/footer";
+
+/**
+  Exonym Plugins
+  ---------------------------------------------------------------------- */
+// @import "../../../../plugins/exonym-content/sass/exonym-content.scss"; // Content Builder
+// @import "../../../../plugins/exonym-staff/exonym-staff.scss"; // Staff Plugin
