Assign color palate, change function name for Latus

--- a/site/web/app/themes/exonym/assets/styles/config/_colors.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_colors.scss
@@ -1,13 +1,7 @@
 $white: #fff;
-$grey: #ccc;
 $black: #000;
-$red: #f00;
-$blue: #00f;
-
-$color-scheme: (
-  color-white: $white,
-  color-grey: $grey,
-  color-black: $black,
-  color-red: $red,
-  color-blue: $blue
-);
+$black-trans: rgba(0, 0, 0, 0.36);
+$tan: #ffebcc;
+$green: #8bb099;
+$red: #f2655b;
+$yellow: #ffce6f;
