--- a/site/web/app/themes/exonym/assets/styles/global/_base.scss
+++ b/site/web/app/themes/exonym/assets/styles/global/_base.scss
@@ -19,7 +19,7 @@ a {
   text-decoration: none;
 }
 
-@include linkColor($blue, all);
+@include linkColor($black, all);
 
 /**
   Wordpress Image ALignment
