Add footer navigation, add login redirect sequence

--- a/site/web/app/themes/exonym/assets/styles/config/_colors.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_colors.scss
@@ -6,3 +6,4 @@ $green: #8bb099;
 $red: #f2655b;
 $yellow: #ffce6f;
 $dropShadow: 0 1px 6px 0 $black-trans;
+$dropShadowReverse: 0 -1px 6px 0 $black-trans;
