--- a/site/web/app/themes/exonym/assets/styles/config/_typography.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_typography.scss
@@ -1,10 +1,10 @@
 /**
   Font Families & Settings
   ---------------------------------------------------------------------- */
-@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i');
 
-$font-default: "Lato", sans-serif;
-$font-heading: "Lato", sans-serif;
+$font-default: "Roboto Condensed", sans-serif;
+$font-heading: "Roboto Condensed", sans-serif;
 
 $font-size: 16px;
 
