--- a/site/web/app/themes/exonym/assets/styles/config/_forms.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_forms.scss
@@ -8,13 +8,13 @@ $fh-font-size: $font-size !default;
 $fh-font-color: $black !default;
 
 // Borders
-$fh-border-radius: 5px !default;
+$fh-border-radius: 0 !default;
 $fh-border-width: 1px !default;
 $fh-border-style: solid !default;
-$fh-border-color: $black !default;
+$fh-border-color: $black-trans !default;
 
 // Inputs, Textareas, Select, Option
-$fh-input-height: 2.5em !default;
+$fh-input-height: 10vw !default;
 $fh-input-width: 100% !default;
 $fh-input-max-width: auto !default;
 $fh-input-bg-color: $white !default;
