--- a/site/web/app/themes/exonym/assets/styles/main.scss
+++ b/site/web/app/themes/exonym/assets/styles/main.scss
@@ -18,7 +18,6 @@
 @import "global/footer";
 
 /**
-  Exonym Plugins
+  Latus Finance
   ---------------------------------------------------------------------- */
-// @import "../../../../plugins/exonym-content/sass/exonym-content.scss"; // Content Builder
-// @import "../../../../plugins/exonym-staff/exonym-staff.scss"; // Staff Plugin
+@import "modules/overview";
