--- a/site/web/app/themes/exonym/assets/styles/config/_typography.scss
+++ b/site/web/app/themes/exonym/assets/styles/config/_typography.scss
@@ -6,7 +6,7 @@
 $font-default: "Roboto Condensed", sans-serif;
 $font-heading: "Roboto Condensed", sans-serif;
 
-$font-size: 16px;
+$font-size: 5vw;
 
 $font-light: 300;
 $font-normal: 400;
